# Market-Intent

./: directory_transfer.py  directory_transfer.sh  educ-exp-scraper.js  endpoint.ts  linkedin_scraper.js  package-lock.json  package.json  scrape_utilities.js
crew-ai/: groq.py  test.py
crew-ai/edu/: README.md  pyproject.toml
crew-ai/edu/src/edu/: crew.py  main.py
crew-ai/scrape/: README.md  company_profile.json  pyproject.toml  report.md
crew-ai/scrape/src/scrape/: crew.py  main.py
crew-ai/scrape/src/scrape/config/: agents.yaml  tasks.yaml
