[project]
name = "scrape"
version = "0.1.0"
description = "scrape using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
scrape = "scrape.main:run"
run_crew = "scrape.main:run"
train = "scrape.main:train"
replay = "scrape.main:replay"
test = "scrape.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
